objects/Glucosamine__c.object
<CustomObject>
    <label>Glucosamine</label>
    <nameField>
        <displayFormat>GSM-{0000000000}</displayFormat>
        <label>Glucosamine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Glucosamines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email </label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Glucosamines</relationshipLabel>
        <relationshipName>Glucosamines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dosage_Glucosamine__c</fullName>
        <label>GSM_v1.0.7</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ever_Taken_Glucosamine__c</fullName>
        <label>GSM_v1.0.1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_Took_Glucosamine__c</fullName>
        <label>GSM_v1.0.3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Duration_Taking_Glucosamine__c</fullName>
        <label>GSM_v1.0.6</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Frequency_of_Glucosamine_Intake__c</fullName>
        <label>GSM_v1.0.4</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Reason_for_Taking_Glucosamine__c</fullName>
        <label>GSM_v1.0.8</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Since_Stopped_Taking_Glucosamine__c</fullName>
        <label>GSM_v1.0.2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Frequency_of_Glucosamine_Intake__c</fullName>
        <label>GSM_v1.0.5</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>